--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     // Koin Core features
     implementation "io.insert-koin:koin-core:${koin_version}"
 
+    // Koin main features for Android
+    implementation "io.insert-koin:koin-android:$koin_version"
+
     // OkHttp
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
 
@@ -76,6 +79,8 @@ dependencies {
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
 
+    // RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
 
 
