--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     // RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
+    // RecyclerView
+    implementation("androidx.recyclerview:recyclerview:1.2.1")
+
 
 
 
