--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     // RecyclerView
     implementation("androidx.recyclerview:recyclerview:1.2.1")
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 
 
 
