--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -44,6 +46,8 @@ def nav_version = "2.4.1"
 
 dependencies {
 
+
+
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 
     // Gson
@@ -59,7 +63,11 @@ dependencies {
     // Room
     implementation("androidx.room:room-runtime:${roomVersion}")
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor("androidx.room:room-compiler:${roomVersion}")
+    kapt("androidx.room:room-compiler:${roomVersion}")
+
+
+    // RxJava2 support for Room
+    implementation("androidx.room:room-rxjava2:$roomVersion")
 
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle_version}")
@@ -79,6 +87,9 @@ dependencies {
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
 
+    // RxJava2CallAdapterFactory
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
     // RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
@@ -90,6 +101,7 @@ dependencies {
 
 
 
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -98,3 +110,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
